Revert the client to not require any runtime preview features
It's not as important to use virtual threads on the client,
as we need way less threads compared to the server.

This way we won't need the flag to run the GUI jar.